welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:4: error: value <=- is not a member of Int
    if (temp2<=-1) {
             ^icyHot:9: error: value <=- is not a member of Int
    if (temp1<=-1) {
             ^